# aws-lambda-action-filter

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.lambda-runtime  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
scripts/: build.sh
src/: domain.rs  lib.rs  main.rs
testdata/: 01_sample-input.json  02_priority-input.json  03_bad-input.json  04_edge-cases.json  sample-input.json
tests/: basic_filter_tests.rs  edge_case_tests.rs  filter_tests.rs  integration_tests.rs
